--- a/untangle-development-runtime/debian/changelog
+++ b/untangle-development-runtime/debian/changelog
@@ -1,3 +1,9 @@
+untangle-development-runtime (13.1) UNRELEASED; urgency=medium
+
+  * Traverse version bump 
+
+ -- Mathew McBride <matt@traverse.com.au>  Thu, 02 Nov 2017 01:15:42 +0000
+
 untangle-development-runtime (6.3.0~svn20090220r22108mylittlepony-1lenny) chaos-release62; urgency=low
 
   * auto build
